@@ -27,16 +27,22 @@
       <licence tarname="isl-%-mingw32-lic.tar.%" />
 
       <component class="dev">
-        <release tarname="isl-0.18-2-mingw32-dev.tar.xz" />
-        <requires eq="libisl-%-mingw32-dll-15.tar" />
+        <release tarname="isl-0.21-2-mingw32-dev.tar.xz">
+          <requires eq="libisl-%-mingw32-dll-21.tar" />
+        </release>
+        <release tarname="isl-0.18-2-mingw32-dev.tar.xz">
+          <requires eq="libisl-%-mingw32-dll-15.tar" />
+        </release>
         <requires ge="gmp-*-mingw32-dev.tar" />
       </component>
 
       <component class="doc">
+        <release tarname="isl-0.21-2-mingw32-doc.tar.xz" />
         <release tarname="isl-0.18-2-mingw32-doc.tar.xz" />
       </component>
 
       <component class="lic">
+        <release tarname="isl-0.21-2-mingw32-lic.tar.xz" />
         <release tarname="isl-0.18-2-mingw32-lic.tar.xz" />
       </component>
     </package>
@@ -60,6 +66,7 @@
       <licence tarname="isl-%-mingw32-lic.tar.%" />
 
       <component class="dll">
+        <release tarname="libisl-0.21-2-mingw32-dll-21.tar.xz" />
         <release tarname="libisl-0.18-2-mingw32-dll-15.tar.xz" />
         <requires eq="mingw32-libgmp-*-mingw32-dll-10.tar" />
         <requires eq="mingw32-libgcc-*-mingw32-dll-1.tar" />
